; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_pwm2.c_lpwm2_set_duty.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_pwm2.c_lpwm2_set_duty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 }

@GPIO_PIN_NUM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"invalid pin number\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"invalid duty\00", align 1
@.str.2 = private unnamed_addr constant [31 x i8] c"pwm2 : pin=%d is not setup yet\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @lpwm2_set_duty to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lpwm2_set_duty(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 0, i32* %4, align 4
  br label %7

7:                                                ; preds = %1, %59
  %8 = load i32*, i32** %3, align 8
  %9 = load i32, i32* %4, align 4
  %10 = add nsw i32 %9, 1
  store i32 %10, i32* %4, align 4
  %11 = call i32 @luaL_optinteger(i32* %8, i32 %10, i32 -1)
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* %5, align 4
  %13 = icmp eq i32 %12, -1
  br i1 %13, label %14, label %15

14:                                               ; preds = %7
  br label %63

15:                                               ; preds = %7
  %16 = load i32*, i32** %3, align 8
  %17 = load i32, i32* %5, align 4
  %18 = icmp sgt i32 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %15
  %20 = load i32, i32* %5, align 4
  %21 = load i32, i32* @GPIO_PIN_NUM, align 4
  %22 = icmp sle i32 %20, %21
  br label %23

23:                                               ; preds = %19, %15
  %24 = phi i1 [ false, %15 ], [ %22, %19 ]
  %25 = zext i1 %24 to i32
  %26 = load i32, i32* %4, align 4
  %27 = call i32 @luaL_argcheck2(i32* %16, i32 %25, i32 %26, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %28 = load i32*, i32** %3, align 8
  %29 = load i32, i32* %4, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %4, align 4
  %31 = call i32 @luaL_optinteger(i32* %28, i32 %30, i32 -1)
  store i32 %31, i32* %6, align 4
  %32 = load i32*, i32** %3, align 8
  %33 = load i32, i32* %6, align 4
  %34 = icmp sge i32 %33, 0
  br i1 %34, label %35, label %47

35:                                               ; preds = %23
  %36 = load i32, i32* %6, align 4
  %37 = call %struct.TYPE_6__* (...) @pwm2_get_module_data()
  %38 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %37, i32 0, i32 0
  %39 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %38, i32 0, i32 0
  %40 = load %struct.TYPE_4__*, %struct.TYPE_4__** %39, align 8
  %41 = load i32, i32* %5, align 4
  %42 = sext i32 %41 to i64
  %43 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %40, i64 %42
  %44 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 4
  %46 = icmp sle i32 %36, %45
  br label %47

47:                                               ; preds = %35, %23
  %48 = phi i1 [ false, %23 ], [ %46, %35 ]
  %49 = zext i1 %48 to i32
  %50 = load i32, i32* %4, align 4
  %51 = call i32 @luaL_argcheck2(i32* %32, i32 %49, i32 %50, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0))
  %52 = load i32, i32* %5, align 4
  %53 = call i32 @pwm2_is_pin_setup(i32 %52)
  %54 = icmp ne i32 %53, 0
  br i1 %54, label %59, label %55

55:                                               ; preds = %47
  %56 = load i32*, i32** %3, align 8
  %57 = load i32, i32* %5, align 4
  %58 = call i32 @luaL_error(i32* %56, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.2, i64 0, i64 0), i32 %57)
  store i32 %58, i32* %2, align 4
  br label %64

59:                                               ; preds = %47
  %60 = load i32, i32* %5, align 4
  %61 = load i32, i32* %6, align 4
  %62 = call i32 @pwm2_set_duty(i32 %60, i32 %61)
  br label %7

63:                                               ; preds = %14
  store i32 0, i32* %2, align 4
  br label %64

64:                                               ; preds = %63, %55
  %65 = load i32, i32* %2, align 4
  ret i32 %65
}

declare dso_local i32 @luaL_optinteger(i32*, i32, i32) #1

declare dso_local i32 @luaL_argcheck2(i32*, i32, i32, i8*) #1

declare dso_local %struct.TYPE_6__* @pwm2_get_module_data(...) #1

declare dso_local i32 @pwm2_is_pin_setup(i32) #1

declare dso_local i32 @luaL_error(i32*, i8*, i32) #1

declare dso_local i32 @pwm2_set_duty(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
